--- a/soccer/index.html
+++ b/soccer/index.html
@@ -145,8 +145,8 @@
                             <hr class="mt-0 mb-1">
 
                             <label class="mb-1 font-weight-semibold" for="email">Email Address</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
-                            <small id="email-help" class="form-text text-muted">If this job is submitted to the queue, a notification will be sent to your email address once processing is complete.</small>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" aria-describedby="email-help">
+                            <em id="email-help" class="small form-text font-italic text-muted">If this job is submitted to the queue, a notification will be sent to your email address once processing is complete.</em>
 
                             <input type="hidden" name="file-id" id="file-id">
                         </div>
