NCIATWP-1312: use min-height

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -103,7 +103,7 @@
         <section class="tab-pane container shadow-lg p-4 w-100 bg-white" id="soccer" role="tabpanel" aria-labelledby="soccer-tab">
             <h1 class="h4 mb-3 text-primary">SOCcer</h1>
             <!-- <hr> -->
-            <div class="row p-0 h-90">
+            <div class="row p-0 mh-90">
                 <!-- Left Panel -->
                 <div class="col-md-4">
                     <form id="soccer-form" class="h-100 bg-light shadow-light rounded">
