move plugins to a separate file

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -153,8 +153,8 @@
 
                         <div class="text-right p-3">
                             <hr>
-                            <button type="reset" id="reset" class="btn btn-outline-light text-dark font-weight-semibold">Reset</button>
-                            <button type="submit" id="submit" class="btn btn-primary font-weight-semibold d-inline-flex align-items-center">
+                            <button type="reset" class="btn btn-outline-light text-dark font-weight-semibold">Reset</button>
+                            <button type="submit" class="btn btn-primary font-weight-semibold d-inline-flex align-items-center">
                                 Submit
                                 <img id="loading" style="display: none" class="spinner ml-2" src="static/img/icons/spinner-third.svg" alt="loading" height="16" width="16" />
                             </button>
@@ -417,6 +417,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/plugins.js"></script>
     <script src="static/js/soccer.js"></script>
 </body>
 
