use same font for banner

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -36,12 +36,7 @@
             <div class="container py-1 my-0 px-0 d-flex align-items-center">
                 <!-- <img src="static/img/logos/soccer-logo-inline-outlined.png" alt="soccer logo" height="18"  style="margin-bottom: 3px"> -->
                 <span class="m-0 h5 font-weight-normal">
-                    <b style="color:#600">S</b>tandardized
-                    <b style="color:#900">O</b>ccupation
-                    <b style="color:#A00">C</b>oding for
-                    <b style="color:#B00">C</b>omputer-assisted
-                    <b style="color:#D00">E</b>pidemiological
-                    <b style="color: #F00">R</b>esearch
+                    Standardized Occupation Coding for Computer-assisted Epidemiological Research
                 </span>
             </div>
         </div>
