--- a/soccer/index.html
+++ b/soccer/index.html
@@ -101,7 +101,7 @@
             <div class="row p-0 mh-90">
                 <!-- Left Panel -->
                 <div class="col-md-4">
-                    <form id="soccer-form" class="h-100 bg-light shadow-light rounded">
+                    <form id="soccer-form" class="h-100 bg-light border-light shadow-sm rounded">
                         <div class="p-3">
 
                             <div class="form-group">
@@ -110,7 +110,7 @@
                                     </label>
                                     <img tabindex="0" data-trigger="focus" data-toggle="popover" title="Model: SOCcer" data-content="Features: Job Title, SIC, Job Tasks" class="cursor-pointer ml-2" src="static/img/icons/info-circle.svg" height="16" width="16" alt="info circle" />
                                 </div>
-                                <select id="model-version" name="model-version" class="form-control mb-2" required>
+                                <select id="model-version" name="model-version" class="light form-control mb-2" required>
                                     <option value="1">model v1.0</option>
                                     <option value="2" selected>model v2.0</option>
                                 </select>
@@ -141,7 +141,7 @@
                             <hr class="mt-0 mb-1">
 
                             <label class="mb-1 font-weight-semibold" for="email">Email Address</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" aria-describedby="email-help" disabled aria-disabled="true">
+                            <input type="email" class="light form-control" id="email" name="email" placeholder="Enter email" aria-describedby="email-help" disabled aria-disabled="true">
                             <em id="email-help" class="small form-text font-italic text-muted">If this job is submitted to the queue, a notification will be sent to your email address once processing is complete.</em>
 
                             <input type="hidden" name="file-id" id="file-id">
@@ -161,7 +161,7 @@
 
                 <!-- Right Panel -->
                 <div class="col-md-8">
-                    <div class="h-100 rounded shadow-light p-3">
+                    <div class="h-100 rounded border-light shadow-sm p-3">
                         <div id="alerts"></div>
                         <div id="instructions" style="display: none;">
                             <h2 class="h5 font-weight-semibold">Instructions</h2>
