replace alert-danger with alert-info/warning

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -114,7 +114,7 @@
                                     <option value="1">model v1.0</option>
                                     <option value="2" selected>model v2.0</option>
                                 </select>
-                                <div class="alert alert-danger" role="alert">We recommend using model v2.0, the most recent and more accurate version.</div>
+                                <div class="alert alert-info" role="alert">We recommend using model v2.0, the most recent and more accurate version.</div>
                             </div>
 
                             <div class="form-group">
@@ -259,7 +259,7 @@
                 <div class="tab-pane" id="v1-help" role="tabpanel" aria-labelledby="v1-help-tab">
                     <h2 class="h5">Input Format</h2>
 
-                    <div class="alert alert-danger">
+                    <div class="alert alert-info">
                         We recomend use of the most recent version, SOCcer 2.0, which has improved accuracy. SOCcer 1.0 remains enabled for those who used it prior to the update.
                     </div>
 
@@ -282,7 +282,7 @@
                         "Teacher, high school",,
                     </blockquote>
 
-                    <div class="alert alert-danger" role="alert"><strong>Warning:</strong> Microsoft Word and other word processesors often use smart quotes (&ldquo; &rdquo;) instead of standard quotation marks (", ASCII character 34). This will cause problems with the word count and require fixing before SOCcer can proceed.</div>
+                    <div class="alert alert-warning" role="alert"><strong>Warning:</strong> Microsoft Word and other word processesors often use smart quotes (&ldquo; &rdquo;) instead of standard quotation marks (", ASCII character 34). This will cause problems with the word count and require fixing before SOCcer can proceed.</div>
 
                     <p>The SOCcer results are provided in a comma-separated file that contains the row number, job title, SIC, job tasks, and the ten highest ranked SOC codes, with corresponding SOCcer scores.</p>
 
@@ -357,7 +357,7 @@
 
                     <p>If the ids are left blank, they will be assigned by SOCcer as 1, 2, 3, … , &lt;number of lines&gt;.</p>
 
-                    <p class="alert alert-danger">If you are using Microsoft Excel, be careful about having newline characters and smart quotes in your data. They are going to cause problems with the data upload procedure.</p>
+                    <p class="alert alert-warning">If you are using Microsoft Excel, be careful about having newline characters and smart quotes in your data. They are going to cause problems with the data upload procedure.</p>
 
                 </div>
 
