--- a/soccer/index.html
+++ b/soccer/index.html
@@ -90,7 +90,7 @@
                                     </label>
                                     <img tabindex="0" data-trigger="focus" data-toggle="popover" title="Model: SOCcer" data-content="Features: Job Title, SIC, Job Tasks" class="cursor-pointer ml-2" src="static/img/icons/info-circle.svg" height="16" width="16" alt="info circle" />
                                 </div>
-                                <select id="model-version" name="model-version" class="light form-control mb-2" required>
+                                <select id="model-version" name="model_version" class="light form-control mb-2" required>
                                     <option value="1">model v1.0</option>
                                     <option value="2" selected>model v2.0</option>
                                 </select>
@@ -105,7 +105,7 @@
                                         <a href="static/files/example2.csv" download>Example 2</a>
                                     </span>
                                 </label>
-                                <input class="small d-block mb-1" type="file" id="input-file" name="input-file" accept=".csv" required>
+                                <input class="small d-block mb-1" type="file" id="input-file" name="input_file" accept=".csv" required>
                                 <div class="small text-dark font-italic" id="input-file-description"></div>
 
                                 <div class="progress my-1" style="display: none;">
@@ -124,7 +124,7 @@
                             <input type="email" class="light form-control" id="email" name="email" placeholder="Enter email" aria-describedby="email-help" disabled aria-disabled="true">
                             <em id="email-help" class="small form-text font-italic text-muted">If this job is submitted to the queue, a notification will be sent to your email address once processing is complete.</em>
 
-                            <input type="hidden" name="file-id" id="file-id">
+                            <input type="hidden" name="file_id" id="file-id">
                         </div>
 
                         <div class="text-right p-3">
@@ -147,9 +147,9 @@
                             <h2 class="h5 font-weight-semibold">Instructions</h2>
                             <p>To begin, select a model version and upload a csv input file which conforms to the <a href="#help" data-tab="#help-tab">input data format.</a></p>
                         </div>
-                        <div id="results-container" style="display: none;">
+                        <div id="results" style="display: none;">
                             <!-- <h2 class="h5 font-weight-semibold">Results</h2> -->
-                            <div class="mb-2 text-center">
+                            <div class="mb-3 text-center">
                                 <img class="img-fluid" id="plot" alt="output plot">
                             </div>
                             <div>
