prevent file input name overflow

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -105,7 +105,7 @@
                                         <a href="static/files/example2.csv" download>Example 2</a>
                                     </span>
                                 </label>
-                                <input class="small d-block mb-1" type="file" id="input-file" name="input_file" accept=".csv" required>
+                                <input class="small d-block mb-1 mw-100 overflow-hidden" type="file" id="input-file" name="input_file" accept=".csv" required>
                                 <div class="small text-dark font-italic" id="input-file-description"></div>
 
                                 <div class="progress my-1" style="display: none;">
