ensure location is consistent

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -197,7 +197,7 @@
             <p>SOCAssign is an application to assist expert review of the top 10 SOCcer assignments for each job description to provide an expert SOC-2010 assignment. SOCAssign will read SOCcer ouput. Before importing, the SOCcer results can be preprocessed to focus the expert review on a subset of job descriptions, such as job descriptions with SOC codes that are tied for the highest score or that had low SOCcer scores. For each job description, SOCAssign will allow the selection of up to 3 SOC-2010 codes. The code scan be selected from the SOCcer output list, from a list of all SOC-2010 codes, or manually entered. A validation check ensures that only valid SOC-2010 can be entered.</p>
             <table class="mb-3">
                 <tr>
-                    <td class="pr-3 font-weight-bold"><a href="static/files/SOCAssign.jnlp">SOCAssign</a></td>
+                    <td class="pr-3 font-weight-bold"><a href="#" onclick="downloadJNLP()">SOCAssign</a></td>
                     <td>Run as Web Start</td>
                 </tr>
                 <tr>
@@ -440,7 +440,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js,npm/file-saver@2"></script>
     <script src="static/js/plugins.js"></script>
     <script src="static/js/soccer.js"></script>
 </body>
