update help text for Melissa

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -318,9 +318,7 @@
                 <div class="tab-pane show active" id="v2-help" role="tabpanel" aria-labelledby="v2-help-tab">
                     <h2 class="h5">Input Format</h2>
 
-                    <p>SOCcer 2.0 requires data in comma separated value (csv) format. The data should contain an id and a job title at the minimum. Optionally, job tasks can be added to the data to improve classification. Industry is no longer part of the classifier, because the improvement to the results were small.</p>
-
-                    <p>The first line of the file is a header line that describes the column of data. The order of the columns is set by the header. The id column must have the header of “id” or “personid”. The job titles must be labelled “jobtitle”. The industry should be labelled as "sic" or "industry", and the job tasks must be labelled “task”, “tasks”, “jobtask”, or “jobtasks”. The rest of the file should be data. If the data contains a comma, make sure you surround the data with quotes (e.g. if the job title is professor, chemistry, the job title data should be “professor, chemistry”.). Do not quote the entire line. All columns must be filled, even if they are blank. Make sure to use commas to specify blank data.</p>
+                    <p>SOCcer 2.0 requires data in comma separated value (csv) format. The data should contain an id and a job title at the minimum. Optionally, job tasks can be added to the data to improve classification. Industry is no longer part of the classifier, because the improvement to the results were small; however, at this time the data format still requires a valid SIC (9999 is acceptable). Make sure to use commas to specify blank data (e.g., no task information).</p>
 
                     <p>An example of a valid file is: </p>
 
