In SOCcer2 help, myid4 was on the same line as myid3

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -326,7 +326,7 @@
                         id,jobtitle,sic,jobtask<br>
                         myid1,"Teacher, high school",8211, "formulate lesson plans, teach 11th grade match"<br>
                         myid2,, 8211,"formulate lesson plans, teach 11th grade match"<br>
-                        myid3,"Teacher, high school", 8211,
+                        myid3,"Teacher, high school", 8211,<br>
                         myid4,”high school teacher”,9999,
                     </blockquote>
 
