Made the page more responsive and also changed the logo on top to NCI

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -18,18 +18,9 @@
     <header class="flex-none-auto">
         <a href="#main" class="sr-only sr-only-focusable text-white bg-primary-dark text-center py-2 d-block">Skip to main content</a>
         <div class="container px-0">
-            <div class="row d-flex align-items-center">
-                <div class="col-md-7 text-left d-none d-md-block">
-                    <a href="https://dceg.cancer.gov/">
-                        <img class="img-fluid" src="static/img/logos/nci-dceg-logo.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" height="100">
-                    </a>
-                </div>
-                <div class="col-md-5 text-right d-none d-md-block">
-                    <a href="https://cit.nih.gov/">
-                        <img class="img-fluid" src="static/img/logos/cit-dcb-logo.svg" alt="NIH Center for Information Technology - Division of Computational Bioscience" height="70">
-                    </a>
-                </div>
-            </div>
+            <a href="https://dceg.cancer.gov/" class="d-none d-lg-block my-3">
+                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="height: 50px;">
+            </a>
         </div>
 
         <div class="bg-primary text-light d-none d-lg-block ">
@@ -80,7 +71,7 @@
             <!-- <hr> -->
             <div class="row p-0 mh-90">
                 <!-- Left Panel -->
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <form id="soccer-form" class="h-100 bg-light border-light shadow-sm rounded">
                         <div class="p-3">
 
@@ -140,7 +131,7 @@
                 <!-- End Left Panel -->
 
                 <!-- Right Panel -->
-                <div class="col-md-8">
+                <div class="col-lg-8">
                     <div class="h-100 rounded border-light shadow-sm p-3">
                         <div id="alerts"></div>
                         <div id="instructions" style="display: none;">
