--- a/soccer/index.html
+++ b/soccer/index.html
@@ -19,7 +19,7 @@
         <a href="#main" class="sr-only sr-only-focusable text-white bg-primary-dark text-center py-2 d-block">Skip to main content</a>
         <div class="container px-0">
             <a href="https://dceg.cancer.gov/" class="d-none d-block my-3">
-                <img class="img-fluid" src="/../common/images/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px; padding-right: 20px">
+                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px; padding-right: 20px">
             </a>
         </div>
 
