made the logo align with the navbar

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -18,9 +18,12 @@
     <header class="flex-none-auto">
         <a href="#main" class="sr-only sr-only-focusable text-white bg-primary-dark text-center py-2 d-block">Skip to main content</a>
         <div class="container px-0">
-            <a href="https://dceg.cancer.gov/" class="d-none d-flex my-2">
+            <a href="https://dceg.cancer.gov/" class="d-none d-sm-block my-2">
+                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px;  padding-right: 30px">
+            </a>
+            <a href="https://dceg.cancer.gov/" class="d-none d-sm-none d-flex my-2 ml-4">
                 <!-- <img class="img-fluid px-4" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px;"> -->
-                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px; padding-right: 30px">
+                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px;  padding-right: 30px">
             </a>
         </div>
 
