Added the 13px of padding to the left of the logo

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -19,11 +19,11 @@
         <a href="#main" class="sr-only sr-only-focusable text-white bg-primary-dark text-center py-2 d-block">Skip to main content</a>
         <div class="container px-0">
             <a href="https://dceg.cancer.gov/" class="d-sm-flex d-none my-3">
-                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="width:60%; height:100%; max-height:50px; min-height:28px; padding-right: 13px">
+                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="width:60%; padding-left:13px; max-height:100px; min-height:28px; padding-right: 13px">
             </a>
             <a href="https://dceg.cancer.gov/" class="d-none d-sm-none d-flex my-3 ml-4">
                 <!-- <img class="img-fluid px-4" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px;"> -->
-                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="width:60%; height:100%; max-height:50px; min-height:28px; padding-right: 13px">
+                <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="width:60%; max-height:50px; min-height:28px; padding-left:13px; padding-right: 13px">
             </a>
         </div>
 
