made the home button in the footer refresh the page

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -371,7 +371,7 @@
         <div class="container px-4">
             <ul class="list-inline">
                 <li class="d-block d-md-inline list-inline-item">
-                    <a href="https://www.cancer.gov/" class="text-light" target="_blank">Home</a>
+                    <a href="." class="text-light">Home</a>
                 </li>
 
                 <li class="d-none d-md-inline list-inline-item">|</li>
