--- a/soccer/index.html
+++ b/soccer/index.html
@@ -21,7 +21,7 @@
             <a href="https://dceg.cancer.gov/" class="d-sm-flex d-none my-4" target="_blank">
                 <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="width:60%; height:100%; min-height:28px; padding-right: 13px">
             </a>
-            <a href="https://dceg.cancer.gov/" class="d-none d-sm-none d-flex my-4 ml-4" target="_blank">                
+            <a href="https://dceg.cancer.gov/" class="d-none d-sm-none d-flex my-4 ml-4" target="_blank">
                 <!-- <img class="img-fluid px-4" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="max-height: 50px;"> -->
                 <img class="img-fluid" src="static/img/logos/nci-logo-full.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" style="height:28px; padding-right: 13px">            </a>
         </div>
@@ -95,8 +95,8 @@
                                 <label for="input-file" class="mb-1">
                                     <span class="font-weight-semibold mr-1">Input File</span>
                                     <span class="small font-italic text-nowrap ml-auto">
-                                        <a href="static/files/example1.csv" download>Example 1</a>
-                                        <a href="static/files/example2.csv" download>Example 2</a>
+                                        <a href="static/files/example1.csv" download="example1.csv">Example 1</a>
+                                        <a href="static/files/example2.csv" download="example2.csv">Example 2</a>
                                     </span>
                                 </label>
                                 <input class="small d-block mb-1 mw-100 overflow-hidden" type="file" id="input-file" name="input_file" accept=".csv" required>
