--- a/soccer/index.html
+++ b/soccer/index.html
@@ -212,7 +212,7 @@
                 <li><a href="https://www.bls.gov/soc/2010/" target="_blank" rel="noopener noreferrer">SOC 2010 System</a></li>
                 <li><a href="https://www.osha.gov/pls/imis/sic_manual.html" target="_blank" rel="noopener noreferrer">SIC 1987 System</a></li>
                 <li><a href="https://www.onetonline.org/" target="_blank" rel="noopener noreferrer">O*NET online</a></li>
-                <li><a href="https://wwwn.cdc.gov/nioccs3/" target="_blank" rel="noopener noreferrer">NIOCCS</a></li>
+                <li><a href="https://csams.cdc.gov/nioccs/" target="_blank" rel="noopener noreferrer">NIOCCS</a></li>
             </ul>
         </section>
         <!-- End Resources Tab -->
@@ -386,6 +386,12 @@
                     <a href="https://www.cancer.gov/global/web/policies" class="text-light" target="_blank" rel="noopener noreferrer">Policies</a>
                 </li>
 
+                <li class="d-none d-md-inline list-inline-item">|</li>
+
+                <li class="d-block d-md-inline list-inline-item">
+                    <a href="https://www.hhs.gov/vulnerability-disclosure-policy/index.html" class="text-light" target="_blank" rel="noopener noreferrer">HHS Vulnerability Disclosure</a>
+                </li>
+                
                 <li class="d-none d-md-inline list-inline-item">|</li>
 
                 <li class="d-block d-md-inline list-inline-item">
