--- a/soccer/index.html
+++ b/soccer/index.html
@@ -85,10 +85,10 @@
                                     <img tabindex="0" data-trigger="focus" data-toggle="popover" title="Model: SOCcer" data-content="Features: Job Title, SIC, Job Tasks" class="cursor-pointer ml-2" src="static/img/icons/info-circle.svg" height="16" width="16" alt="info circle" />
                                 </div>
                                 <select id="model-version" name="model_version" class="light form-control mb-2" required>
-                                    <option value="1">model v1.0</option>
-                                    <option value="2" selected>model v2.0</option>
+                                    <option value="1" selected>model v1.0</option>
+                                    <option value="2" hidden>model v2.0</option>
                                 </select>
-                                <div class="alert alert-info" role="alert">We recommend using model v2.0, the most recent and more accurate version.</div>
+                                <div class="alert alert-info" role="alert" hidden>We recommend using model v2.0, the most recent and more accurate version.</div>
                             </div>
 
                             <div class="form-group">
