--- a/soccer/index.html
+++ b/soccer/index.html
@@ -86,7 +86,7 @@
                                 </div>
                                 <select id="model-version" name="model_version" class="light form-control mb-2" required>
                                     <option value="1">model v1.0</option>
-                                    <option value="1.9">model v1.9</option>
+                                    <option value="1.9">model v1.9 (labelled as 'model v2.0' between ~8/2020-3/17/2023)</option>
                                     <option value="2" selected>model v2.0</option>
                                 </select>
                                 <div class="alert alert-info" role="alert">We recommend using model v2.0, the most recent and more accurate version.</div>
